# assistant

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  config.toml  index.html  opencode.json  release-please-config.json
.claude/: settings.json
.githooks/: pre-commit
.github/: dependabot.yml
apt/: Packages
crates/a2a-json-schema/: Cargo.toml
crates/a2a-json-schema/schema/: a2a.schema.json
crates/a2a-json-schema/src/: agent_card.rs  lib.rs  requests.rs  responses.rs  security.rs  types.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: bus.rs  bus_messages.rs  config.rs  lib.rs  memory.rs  parser.rs  skill.rs  subagent.rs  tool.rs  types.rs
crates/core/templates/: AGENTS.md  BOOT.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
crates/integration-tests/: Cargo.toml
crates/integration-tests/.cargo/: config.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: smoke.rs
crates/interface-cli/: CHANGELOG.md  Cargo.toml
crates/interface-cli/src/: lib.rs  main.rs
crates/interface-mattermost/: CHANGELOG.md  Cargo.toml
crates/interface-mattermost/src/: config.rs  lib.rs  main.rs  runner.rs  tools.rs
crates/interface-signal/: CHANGELOG.md  Cargo.toml  README.md
crates/interface-signal/src/: config.rs  lib.rs  linker.rs  main.rs  runner.rs
crates/interface-slack/: CHANGELOG.md  Cargo.toml
crates/interface-slack/src/: config.rs  lib.rs  main.rs  runner.rs  tools.rs
crates/interface-slack/src/skills/: mod.rs  slack_delete_message.rs  slack_get_history.rs  slack_list_channels.rs  slack_lookup_user.rs  slack_post.rs  slack_react.rs  slack_send_dm.rs  slack_update_message.rs
crates/llm/: CHANGELOG.md  Cargo.toml
crates/llm/src/: client.rs  embedding.rs  http.rs  lib.rs  prompts.rs  provider.rs  react.rs  retry.rs  tool_spec.rs  voyage.rs
crates/mcp-server/: CHANGELOG.md  Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs  protocol.rs  server.rs
crates/opentelemetry-exporter-sqlite/: Cargo.toml
crates/opentelemetry-exporter-sqlite/src/: lib.rs  log.rs  metric.rs  span.rs
crates/provider-anthropic/: Cargo.toml
crates/provider-anthropic/src/: lib.rs  provider.rs
crates/provider-moonshot/: Cargo.toml
crates/provider-moonshot/src/: lib.rs  provider.rs
crates/provider-ollama/: Cargo.toml
crates/provider-ollama/src/: lib.rs  provider.rs
crates/provider-openai/: Cargo.toml
crates/provider-openai/src/: lib.rs  oauth.rs  provider.rs
crates/runtime/: CHANGELOG.md  Cargo.toml
crates/runtime/src/: bootstrap.rs  history.rs  lib.rs  metrics.rs  orchestrator.rs  orchestrator_tests.rs  otel_spans.rs  safety.rs  scheduler.rs  telemetry.rs
crates/runtime/src/memory_indexer/: mod.rs
crates/runtime/src/orchestrator/: mod.rs  subagent.rs  tests.rs  worker.rs
crates/skills/: Cargo.toml
crates/skills-executor/: CHANGELOG.md  Cargo.toml
crates/skills-executor/src/: executor.rs  installer.rs  lib.rs  memory_indexer.rs  prompt_executor.rs  script_executor.rs  wasm_executor.rs
crates/skills-executor/src/builtins/: bash.rs  file_edit.rs  file_glob.rs  file_read.rs  file_write.rs  heartbeat.rs  list_skills.rs  memory.rs  memory_get.rs  memory_patch.rs  memory_search.rs  mod.rs  schedule_task.rs  self_analyze.rs  shell_exec.rs  skill_file_read.rs  soul_memory.rs  web_fetch.rs  web_search.rs
crates/skills/src/: lib.rs  parser.rs  skill.rs
crates/storage/: CHANGELOG.md  Cargo.toml
crates/storage/src/: agents.rs  conversations.rs  lib.rs  log_telemetry.rs  logs.rs  memory.rs  memory_chunks.rs  message_bus.rs  metric_telemetry.rs  metrics.rs  refinements.rs  registry.rs  scheduled_tasks.rs  telemetry.rs  traces.rs  webhooks.rs
crates/tool-executor/: Cargo.toml
crates/tool-executor/src/: executor.rs  installer.rs  lib.rs
crates/tool-executor/src/builtins/: agent_spawn.rs  agent_status.rs  agent_terminate.rs  bash.rs  cancel_task.rs  file_edit.rs  file_glob.rs  file_read.rs  file_write.rs  heartbeat.rs  list_skills.rs  list_tasks.rs  load_skill.rs  memory_append.rs  memory_get.rs  memory_search.rs  mod.rs  process.rs  schedule_task.rs  self_analyze.rs  shell_exec.rs  web_fetch.rs  web_search.rs
crates/transcription/: Cargo.toml
crates/transcription/src/: converter.rs  deepgram.rs  lib.rs  ollama.rs  provider.rs  whisper.rs
crates/transcription/tests/: integration_tests.rs
crates/web-ui/: Cargo.toml  vendor.sh
crates/web-ui/e2e/: package-lock.json  package.json  playwright.config.ts
crates/web-ui/e2e/tests/: visual-regression.spec.ts
crates/web-ui/src/: analytics.rs  auth.rs  common.rs  default.css  legacy.rs  logs.rs  main.rs  traces.rs
crates/web-ui/src/a2a/: agent_store.rs  handlers.rs  mod.rs  pages.rs  task_store.rs
crates/web-ui/src/chat/: mod.rs
crates/web-ui/src/pwa/: manifest.webmanifest  mod.rs  offline.html  sw.js
crates/web-ui/src/static_assets/: agent-form.js  app.js  base.css  chat.js  mod.rs  trace-detail.js
crates/web-ui/src/webhooks/: handler_tests.rs  mod.rs  pages.rs
crates/web-ui/templates/: base.html  wrapper.html
crates/web-ui/templates/agents/: detail.html  form.html  list.html
crates/web-ui/templates/analytics/: page.html
crates/web-ui/templates/auth/: login.html
crates/web-ui/templates/chat/: conversation_list.html  message.html  page.html  panel.html  streaming.html
crates/web-ui/templates/logs/: detail.html  page.html
crates/web-ui/templates/partials/: default_css.html  entity_css.html
crates/web-ui/templates/traces/: detail.html  page.html
crates/web-ui/templates/webhooks/: detail.html  form.html  list.html  verify.html
docker/: Dockerfile.assistant  Dockerfile.assistant-mattermost  Dockerfile.assistant-signal  Dockerfile.assistant-slack  Dockerfile.mcp-server
docs/: COMPARISON.md  authentication.md  messaging.md  moonshot.md  openai.md  opentelemetry.md  slack.md  transcription.md  web-ui.md
migrations/: 001_conversations.sql  002_skills.sql  003_execution_traces.sql  004_memory.sql  005_tool_calls.sql  007_memory_chunks.sql  (+10 more)
(+56 files in other folders)
