[workspace]
members = [
    "crates/core",
    "crates/llm",
    "crates/storage",
    "crates/runtime",
    "crates/skills-executor",
    "crates/mcp-server",
    "crates/interface-cli",
    "crates/interface-signal",
    "crates/integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cedricziel/assistant"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1.0"
thiserror = "2"
# Async traits
async-trait = "0.1"
# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Internal crates
core = { path = "crates/core" }
llm = { path = "crates/llm" }
storage = { path = "crates/storage" }
runtime = { path = "crates/runtime" }
skills-executor = { path = "crates/skills-executor" }

# Force all crates to use the same curve25519-dalek as libsignal/presage.
# Without this patch, two versions coexist (crates.io 4.1.3 vs signalapp git fork
# 4.1.3), causing type-mismatch errors when building with --features signal.
# The signalapp fork is API-compatible; the patch is a no-op for non-signal builds.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
