[package]
name = "assistant"
version = "0.1.15"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[workspace]
members = [
    "crates/core",
    "crates/skills",
    "crates/llm",
    "crates/provider-ollama",
    "crates/provider-anthropic",
    "crates/storage",
    "crates/runtime",
    "crates/tool-executor",
    "crates/mcp-server",
    "crates/interface-cli",
    "crates/interface-signal",
    "crates/interface-slack",
    "crates/interface-mattermost",
    "crates/integration-tests",
    "crates/web-ui",
    "crates/a2a-proto",
    "crates/a2a-json-schema",
]
default-members = [
    "crates/interface-cli",
    "crates/interface-signal",
    "crates/interface-slack",
    "crates/interface-mattermost",
    "crates/web-ui",
    "crates/mcp-server",
]
resolver = "2"

[workspace.package]
version = "0.1.15"
edition = "2021"
license = "MIT"
repository = "https://github.com/cedricziel/assistant"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1.0"
thiserror = "2"
# Async traits
async-trait = "0.1"
# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Encoding
base64 = "0.22"
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
# TLS — explicit dep so binaries can install_default() when both aws-lc-rs and ring are in tree
rustls = { version = "0.23", features = ["ring"] }
# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.24", features = ["trace", "logs"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "tls"] }
opentelemetry_sdk = { version = "0.24", features = ["trace", "logs", "rt-tokio"] }
opentelemetry-appender-tracing = "0.5"
# CLI / config
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "1.0"
# Async streams
futures = "0.3"
# Terminal line editor
reedline = "0.45"
# QR code terminal rendering
qr2term = "0.3"
# YAML frontmatter parser
gray_matter = "0.3"
# YAML serialization (for writing agent card frontmatter)
serde_yaml = "0.9"
# Embed static file trees into the binary at compile time
include_dir = "0.7"
# SQL persistence
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "chrono", "uuid"] }
# cron expression parsing
cron = "0.15"
# HTML parsing for web-fetch builtin
scraper = "0.25"
# Glob pattern matching for file-glob builtin
glob = "0.3"
# JSON Schema validation for tool param checking
jsonschema = "0.42"
# SHA-256 hashing for memory chunk change detection
sha2 = "0.10"
# WASM plugin execution
extism = "1"
# Integration testing
testcontainers = "0.27"
wiremock = "0.6"
# LRU cache (bounded conversation map in Mattermost/Slack runners)
lru = "0.16"
# Slack / Mattermost interfaces
slack-morphism = { version = "2", features = ["hyper"] }
# Force rustls TLS on the tokio-tungstenite transitive dep (slack-morphism only
# enables the cert-store feature, not the actual TLS impl, causing wss:// to fail)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
mattermost_api = "0.8"
# Internal crates
core = { path = "crates/core" }
skills = { path = "crates/skills" }
llm = { path = "crates/llm" }
storage = { path = "crates/storage" }
runtime = { path = "crates/runtime" }
tool-executor = { path = "crates/tool-executor" }

# Force all crates to use the same curve25519-dalek as libsignal/presage.
# Without this patch, two versions coexist (crates.io 4.1.3 vs signalapp git fork
# 4.1.3), causing type-mismatch errors when building with --features signal.
# The signalapp fork is API-compatible; the patch is a no-op for non-signal builds.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
