[package]
name = "assistant-core"
version = "0.1.1"
license.workspace = true
edition.workspace = true
description = "Core types, skill definitions, and shared traits for the assistant workspace"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
# YAML frontmatter parser (serde_yaml is deprecated — use gray_matter)
gray_matter = { workspace = true }
# Embed skills/ directory into the binary at compile time
include_dir = { workspace = true }

[dev-dependencies]
tempfile = "3"
