[package]
name = "assistant-core"
version = "0.1.10"
license.workspace = true
edition.workspace = true
description = "Core types, skill definitions, and shared traits for the assistant workspace"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

