[package]
name = "assistant-integration-tests"
version = "0.1.4"
edition = "2021"
publish = false

[dev-dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
assistant-storage = { path = "../storage" }
assistant-runtime = { path = "../runtime" }
assistant-skills-executor = { path = "../skills-executor" }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
testcontainers = { workspace = true }
