[package]
name = "assistant-cli"
version = "0.1.1"
license.workspace = true
edition.workspace = true
description = "Interactive CLI REPL for the local AI assistant"

[[bin]]
name = "assistant"
path = "src/main.rs"

[lib]
name = "assistant_interface_cli"
path = "src/lib.rs"

[dependencies]
assistant-core = { path = "../core" }
assistant-storage = { path = "../storage" }
assistant-llm = { path = "../llm" }
assistant-skills-executor = { path = "../skills-executor" }
assistant-runtime = { path = "../runtime" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
# Terminal line editor
reedline = { workspace = true }
# Config file parsing
toml = { workspace = true }
# Home directory
dirs = { workspace = true }
