[package]
name = "assistant-interface-mattermost"
version = "0.1.0"
edition = "2021"

# The "mattermost" feature gates the actual Mattermost (mattermost_api)
# integration.  Build with:
#   cargo build -p assistant-interface-mattermost --features mattermost
[features]
mattermost = ["dep:mattermost_api"]

[dependencies]
assistant-core = { path = "../core" }
assistant-runtime = { path = "../runtime" }
assistant-storage = { path = "../storage" }
assistant-llm = { path = "../llm" }
assistant-skills-executor = { path = "../skills-executor" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dirs = "6"
toml = "1.0"
clap = { version = "4", features = ["derive"] }
mattermost_api = { version = "0.8", optional = true }

[[bin]]
name = "assistant-mattermost"
path = "src/main.rs"
