[package]
name = "assistant-interface-mattermost"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mattermost WebSocket interface for the AI assistant"

[dependencies]
assistant-core = { path = "../core" }
assistant-runtime = { path = "../runtime" }
assistant-storage = { path = "../storage" }
assistant-llm = { path = "../llm" }
assistant-skills-executor = { path = "../skills-executor" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
mattermost_api = { workspace = true }
lru = { workspace = true }
async-trait = { workspace = true }

[[bin]]
name = "assistant-mattermost"
path = "src/main.rs"
