[package]
name = "assistant-interface-mattermost"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description = "Mattermost WebSocket interface for the AI assistant (library)"

[lib]
name = "assistant_interface_mattermost"
path = "src/lib.rs"

[dependencies]
assistant-core = { path = "../core" }
assistant-runtime = { path = "../runtime" }
assistant-storage = { path = "../storage" }
assistant-skills-executor = { path = "../skills-executor" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
mattermost_api = { workspace = true }
lru = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
