[package]
name = "assistant-interface-signal"
version = "0.1.12"
license.workspace = true
edition.workspace = true
description = "Signal messenger interface for the assistant (feature-gated)"

# The "signal" feature gates the actual presage (Signal) messenger integration.
# Build with:
#   cargo build -p assistant-interface-signal --features signal
[features]
signal = ["dep:presage", "dep:presage-store-sqlite"]

[dependencies]
assistant-core = { path = "../core" }
assistant-runtime = { path = "../runtime" }
assistant-storage = { path = "../storage" }
assistant-provider-ollama = { path = "../provider-ollama" }
assistant-skills = { path = "../skills" }
assistant-tool-executor = { path = "../tool-executor" }
opentelemetry = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
qr2term = { workspace = true }
presage = { git = "https://github.com/whisperfish/presage", branch = "main", optional = true }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", branch = "main", optional = true }

[[bin]]
name = "assistant-signal"
path = "src/main.rs"
