[package]
name = "assistant-interface-slack"
version = "0.1.38"
edition.workspace = true
license.workspace = true
description = "Slack Socket Mode interface for the AI assistant (library)"

[lib]
name = "assistant_interface_slack"
path = "src/lib.rs"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
assistant-runtime = { path = "../runtime" }
assistant-storage = { path = "../storage" }
assistant-transcription = { path = "../transcription" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
slack-morphism = { workspace = true }
tokio-tungstenite = { workspace = true }

# tokio-tungstenite is not used directly — it forces rustls-tls-native-roots
# onto the transitive dep pulled in by slack-morphism (which only enables the
# cert-store feature, leaving wss:// connections broken without this override).
[dev-dependencies]
toml = { workspace = true }
url = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tokio-tungstenite"]
