[package]
name = "assistant-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
assistant-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
# HTTP client for native Ollama API calls
reqwest = { workspace = true }
# Async stream utilities (for streaming responses)
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true }
