[package]
name = "assistant-llm"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Ollama LLM client with native tool-calling for the assistant"

[dependencies]
assistant-core = { path = "../core" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
# HTTP client for native Ollama API calls
reqwest = { workspace = true }
# Async stream utilities (for streaming responses)
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true }
