[package]
name = "assistant-llm"
version = "0.1.30"
license.workspace = true
edition.workspace = true
description = "Ollama LLM client with native tool-calling for the assistant"

[dependencies]
assistant-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# HTTP client for native Ollama API calls
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }
# Async stream utilities (for streaming responses)
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
