[package]
name = "assistant-mcp-server"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "stdio MCP server exposing assistant skills to Claude Code and other clients"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
assistant-core = { path = "../core" }
assistant-storage = { path = "../storage" }
assistant-llm = { path = "../llm" }
assistant-skills-executor = { path = "../skills-executor" }
assistant-runtime = { path = "../runtime" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dirs = "6"
toml = "1.0"
