[package]
name = "assistant-mcp-server"
version = "0.1.16"
license.workspace = true
edition.workspace = true
description = "stdio MCP server library exposing assistant skills via JSON-RPC 2.0"

[lib]
name = "assistant_mcp_server"
path = "src/lib.rs"

[dependencies]
assistant-core = { path = "../core" }
assistant-storage = { path = "../storage" }
assistant-tool-executor = { path = "../tool-executor" }
assistant-runtime = { path = "../runtime" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
