[package]
name = "assistant-provider-anthropic"
version = "0.1.26"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
assistant-core = { path = "../core" }
assistant-llm  = { path = "../llm" }
async-trait    = { workspace = true }
anyhow         = { workspace = true }
tokio          = { workspace = true }
reqwest        = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
futures        = { workspace = true }
