[package]
name = "assistant-provider-moonshot"
version = "0.1.25"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Moonshot AI (Kimi) LLM provider — thin facade over the OpenAI-compatible provider"

[dependencies]
assistant-core           = { path = "../core" }
assistant-llm            = { path = "../llm" }
assistant-provider-openai = { path = "../provider-openai" }
async-trait              = { workspace = true }
anyhow                   = { workspace = true }
reqwest                  = { workspace = true }
reqwest-middleware        = { workspace = true }
serde                    = { workspace = true }
serde_json               = { workspace = true }
tokio                    = { workspace = true }
tracing                  = { workspace = true }

[dev-dependencies]
wiremock                 = { workspace = true }
