[package]
name = "assistant-provider-moonshot"
version = "0.1.33"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Moonshot AI (Kimi) LLM provider using async-openai Chat Completions"

[dependencies]
assistant-core           = { path = "../core" }
assistant-llm            = { path = "../llm" }
async-openai             = { version = "0.33", features = ["chat-completion"] }
async-trait              = { workspace = true }
anyhow                   = { workspace = true }
futures                  = { workspace = true }
reqwest                  = { workspace = true }
reqwest-middleware        = { workspace = true }
serde                    = { workspace = true }
serde_json               = { workspace = true }
tokio                    = { workspace = true }
tracing                  = { workspace = true }

[dev-dependencies]
wiremock                 = { workspace = true }
