[package]
name = "assistant-provider-ollama"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Ollama LLM provider implementing the assistant LlmProvider trait"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
