[package]
name = "assistant-provider-ollama"
version = "0.1.8"
license.workspace = true
edition.workspace = true
description = "Ollama LLM provider implementing the assistant LlmProvider trait"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
