[package]
name = "assistant-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
assistant-storage = { path = "../storage" }
assistant-skills-executor = { path = "../skills-executor" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# cron expression parsing for scheduler
cron = "0.12"
