[package]
name = "assistant-runtime"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "ReAct orchestrator and safety gate for the assistant runtime"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
assistant-storage = { path = "../storage" }
assistant-skills-executor = { path = "../skills-executor" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# cron expression parsing for scheduler
cron = "0.15"
