[package]
name = "assistant-runtime"
version = "0.1.8"
license.workspace = true
edition.workspace = true
description = "ReAct orchestrator and safety gate for the assistant runtime"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
assistant-storage = { path = "../storage" }
assistant-skills = { path = "../skills" }
assistant-tool-executor = { path = "../tool-executor" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# cron expression parsing for scheduler
cron = { workspace = true }
# bootstrap helpers
dirs = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
wiremock = { workspace = true }
