[package]
name = "assistant-skills-executor"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Skill executor dispatching builtin, prompt, script, and WASM skill tiers"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
assistant-storage = { path = "../storage" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
# HTTP for web-fetch builtin
reqwest = { workspace = true }
# HTML stripping for web-fetch
scraper = "0.25"
# cron expression parsing for schedule-task
cron = "0.15"
# home directory
dirs = "6"
# WASM plugin execution via extism
extism = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
assistant-storage = { path = "../storage" }
uuid = { workspace = true }
