[package]
name = "assistant-skills-executor"
version = "0.1.1"
license.workspace = true
edition.workspace = true
description = "Skill executor dispatching builtin, prompt, script, and WASM skill tiers"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
assistant-storage = { path = "../storage" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
# HTTP for web-fetch builtin
reqwest = { workspace = true }
# HTML stripping for web-fetch
scraper = { workspace = true }
# cron expression parsing for schedule-task
cron = { workspace = true }
# home directory
dirs = { workspace = true }
# WASM plugin execution via extism
extism = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
assistant-storage = { path = "../storage" }
uuid = { workspace = true }
