[package]
name = "assistant-skills-executor"
version = "0.1.2"
license.workspace = true
edition.workspace = true
description = "Skill executor dispatching builtin, prompt, script, and WASM skill tiers"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
assistant-storage = { path = "../storage" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
# HTTP for web-fetch builtin
reqwest = { workspace = true }
# HTML stripping for web-fetch / web-search
scraper = { workspace = true }
# Glob pattern matching for file-glob
glob = { workspace = true }
# cron expression parsing for schedule-task
cron = { workspace = true }
# home directory
dirs = { workspace = true }
# WASM plugin execution via extism
extism = { workspace = true }
# JSON Schema validation for tool param checking
jsonschema = { workspace = true }
# SHA-256 hashing for memory chunk change detection
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
assistant-storage = { path = "../storage" }
uuid = { workspace = true }
wiremock = { workspace = true }
