[package]
name = "assistant-skills"
version = "0.1.37"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
gray_matter = { workspace = true }
include_dir = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
