[package]
name = "assistant-storage"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "SQLite-backed storage layer: skill registry, traces, memory, and scheduled tasks"

[dependencies]
assistant-core = { path = "../core" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "chrono", "uuid"] }
dirs = "6"

[dev-dependencies]
tokio = { workspace = true }
