[package]
name = "assistant-storage"
version = "0.1.14"
license.workspace = true
edition.workspace = true
description = "SQLite-backed storage layer: skill registry, traces, memory, and scheduled tasks"

[dependencies]
assistant-core = { path = "../core" }
assistant-skills = { path = "../skills" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
dirs = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
