[package]
name = "assistant-storage"
version = "0.1.35"
license.workspace = true
edition.workspace = true
description = "SQLite-backed storage layer: skill registry, traces, memory, and scheduled tasks"

[dependencies]
assistant-core = { path = "../core" }
assistant-skills = { path = "../skills" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
